Twist-Tac-Toe stopping point. Removed Alpha-Beta pruning.

--- a/index.html
+++ b/index.html
@@ -198,6 +198,12 @@
 
             <p><a href="games/gotcha/"><img src="images/gotcha.png" alt="Image of Gotcha!" title="" /></a></p>
 
+            <h2><a href="games/twisttactoe/">Twist-Tac-Toe</a></h2>
+
+            <p>Variation on the game tic-tac-toe, "<a href="https://boardgamegeek.com/boardgame/11557/chung-toi">Chung Toi</a>." Where players get three tiles and must move those tiles to get three-in-a-row; however, they may only move their tiles based on the directions of the arrows drawn on them. Includes three levels of AI, but more advanced AI take awhile to process moves.</p>
+
+            <p><a href="games/twisttactoe/"><img src="images/twisttactoe.png" alt="Image of Twist-Tac-Toe" title="" /></a></p>
+
         </div>
 
         <div style="float:right;width:45%">
