Kindergarten sight words.

--- a/reading/wordsearch/index.html
+++ b/reading/wordsearch/index.html
@@ -139,6 +139,7 @@ $(document).ready(function() {
     <form >
       <select id="wordgroup">
           <option value="prePrimerWords">Pre-Primer Words</option>
+          <option value="kindergartenWords">Kindergarten Words</option>
           <option value="primerWords">Primer Words</option>
           <option value="firstGradeWords">First-Grade Words</option>
           <option value="secondGradeWords">Second-Grade Words</option>
