--- a/index.html
+++ b/index.html
@@ -272,11 +272,17 @@
 
             <p><a href="math/equivalencymatch/"><img src="images/equivalencymatch.png" alt="Image of Equivalency Match Game" title="" /></a></p>
 
-            <h2><a href="math/equivalencymatch/">24</a></h2>
+            <h2><a href="math/24/">24</a></h2>
 
             <p>Find the sequence of operations that produces the number 24 from the four given numbers. Click "I Give Up" if you think there is no solution to see if the game can find any.</p>
 
             <p><a href="math/24/"><img src="images/24.png" alt="Image of 24 Game" title="" /></a></p>
+
+            <h2><a href="math/zeckendorfstheorem/">Zeckendorf's Theorem</a></h2>
+
+            <p>Without using numbers neighboring one another, find the unique combination of numbers from the Fibonacci set that will sum to the target number.</p>
+
+            <p><a href="math/zeckendorfstheorem/"><img src="images/zeckendorfstheorem.png" alt="Image of Zeckendorf's Theorem Game" title="" /></a></p>
 
             <h2><a href="math/primefactortree/">Prime Factor Tree Generator</a></h2>
 
